--- a/briar-android/src/main/res/values-eu/strings.xml
+++ b/briar-android/src/main/res/values-eu/strings.xml
@@ -31,7 +31,9 @@
   <string name="dialog_title_lost_password">Pasahitz galdua</string>
   <string name="dialog_message_lost_password">Zure Briar kontua zure gailuan zifratuta gordetzen da, ez hodeian, beraz ezin dugu zure pasahitza berrezarri. Zure kontua ezabatu eta berriro hasi nahi duzu?\n\nKontuz: Zure identitateak, kontaktuak eta mezuak betirako galduko dira.</string>
   <string name="startup_failed_notification_title">Ezin izan da Briar abiatu</string>
+  <string name="startup_failed_notification_text">Sakatu informazio gehiagorako</string>
   <string name="startup_failed_activity_title">Briar abio-hutsegitea</string>
+  <string name="startup_failed_data_too_new_error">Aplikazioaren bertsio hau zaharregia da. Eguneratu azken bertsiora eta saiatu berriro.</string>
   <string name="startup_failed_service_error">Briar aplikazioak ezin izan du ezinbesteko plugin bat abiatu. Briar berrinstalatzeak arazoa konpondu ohi du. Hala ere, jakin zure kontua eta datuak galduko dituzula Briar aplikazioak ez baititu zerbitzari zentralak erabiltzen zure datuak gordetzeko.</string>
   <plurals name="expiry_warning">
     <item quantity="one">Hau Briar-en probetarako bertsio bat da. Zure kontua egun %d barru iraungituko da eta ezin da berriztu.</item>
@@ -39,6 +41,8 @@
   </plurals>
   <string name="expiry_update">Probetarako iraungitze data luzatu da. Zure kontua %d egun barru iraungituko da.</string>
   <string name="expiry_date_reached">Programa hau iraungitu da.\nEskerrik asko probatzeagatik!</string>
+  <string name="startup_open_database">Datu-basea deszifratzen...</string>
+  <string name="startup_migrate_database">Datu-basea eguneratzen...</string>
   <!--Navigation Drawer-->
   <string name="nav_drawer_open_description">Ireki nabigazio tiradera</string>
   <string name="nav_drawer_close_description">Itxi nabigazio tiradera</string>
@@ -203,7 +207,7 @@
   <string name="choose_forum_hint">Hautatu zure foroaren izena</string>
   <string name="create_forum_button">Sortu foroa</string>
   <string name="forum_created_toast">Foroa sortuta</string>
-  <string name="no_forum_posts">Foro hau hutsik dago.\n\nErabili goiko arkatzaren ikonoa lehen mezua idazteko.\n\nBakarrik sentitzen zara hemen? Partekatu foro hau zure kontaktuekin!</string>
+  <string name="no_forum_posts">Ez dago mezurik erakusteko</string>
   <string name="no_posts">Sarrerarik ez</string>
   <plurals name="posts">
     <item quantity="one">Bidalketa %d</item>
@@ -247,7 +251,7 @@
   </plurals>
   <string name="nobody">Inor ez</string>
   <!--Blogs-->
-  <string name="blogs_other_blog_empty_state">Blog hau orain hutsik dago.\n\nEgileak ez du ezer idatzi edo blog hau zurekin partekatu duen kontaktua deskonektatuta dago, eta ezin da orain sinkronizatu.</string>
+  <string name="blogs_other_blog_empty_state">Ez dago mezurik erakusteko</string>
   <string name="read_more">irakurri gehiago</string>
   <string name="blogs_write_blog_post">Idatzi blog sarrera</string>
   <string name="blogs_write_blog_post_body_hint">Idatzi zure blog sarrera hemen</string>
