--- a/briar-android/src/main/res/values-he/strings.xml
+++ b/briar-android/src/main/res/values-he/strings.xml
@@ -241,11 +241,13 @@
   <string name="forum_declined_toast">הזמנה לפורום נדחתה</string>
   <string name="shared_by_format">שותף  על ידי %s</string>
   <!--Blogs-->
+  <string name="blogs_remove_blog_ok">להסיר</string>
   <!--Blog Sharing-->
   <!--RSS Feeds-->
   <string name="blogs_rss_feeds_import_button">ייבא</string>
   <string name="blogs_rss_feeds_manage_author">מחבר:</string>
   <string name="blogs_rss_feeds_manage_updated">עודכן לאחרונה:</string>
+  <string name="blogs_rss_remove_feed_ok">להסיר</string>
   <!--Settings Network-->
   <!--Settings Security and Panic-->
   <string name="security_settings_title">אבטחה</string>
